--- a/force-app/main/default/classes/ETAProcessor.cls
+++ b/force-app/main/default/classes/ETAProcessor.cls
@@ -17,7 +17,7 @@ public with sharing class ETAProcessor {
 			Type t = Type.forName(elementProcessorName);
 			elementProcessor = (ETA_Element) t.newInstance();
 
-			elementProcessor.process();
+			elementProcessor.process(etaElement);
 		}
 	}
 }
