--- a/force-app/main/default/classes/iETAElement.cls
+++ b/force-app/main/default/classes/iETAElement.cls
@@ -1,5 +1,3 @@
-global interface ETA_Element {
-	void process();
-
+global interface iETAElement {
 	void process(rHDevOps__ETA_Element__c etaElement);
 }
